5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1621_2925.log
== TEST (2019-04-01 19:32:11) 
-- CODE:

y=input()

populacao=print(x**y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    populacao=print(x**y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:03) 
-- CODE:


y=input()
x=2

populacao=print(x**y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    populacao=print(x**y)
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:30) 
-- CODE:


y=input()
x=2

populacao=int(print(x**y))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    populacao=int(print(x**y))
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:09) 
-- CODE:


y=input()
x=2

populacao=int(print(x**(y)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    populacao=int(print(x**(y)))
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:46) 
-- CODE:


y=input()
x=2

print(x**y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(x**y)
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:19) 
-- CODE:


y=input()
x=2

populacao = print(x**y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    populacao = print(x**y)
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:48) 
-- CODE:


n=input()
x=2

populacao = print(x**n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    populacao = print(x**n)
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:39) 
-- CODE:


y = input()
x = 2

print(p = x**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(p = x**(y))
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:14) 
-- CODE:


y = int(input())
x = 2

print(p = x**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(p = x**(y))
TypeError: 'p' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:13) 
-- CODE:


y = int(input())


print(p = 2**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(p = 2**(y))
TypeError: 'p' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:43) 
-- CODE:


y = int(input())

arg(p(x))
print(p = 2**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    arg(p(x))
NameError: name 'arg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:03) 
-- CODE:


y = int(input())

abs(p(x))
print(p = 2**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    abs(p(x))
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:43) 
-- CODE:


y = int(input())
populacao = p

abs(p(x))
print(p = 2**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    populacao = p
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:22) 
-- CODE:


y = int(input())

abs(p)
print(p = 2**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    abs(p)
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:15) 
-- CODE:


y = int(input())

abs(p)
print(2**(y))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    abs(p)
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:28) 
-- CODE:


y = int(input())


print(2**(y))


-- OUTPUT:
512
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:37) 
-- CODE:


y = int(input())


print(2**(y))


-- EXECUTION TIME:
0.129288
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8192
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
524288
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
